[gd_scene load_steps=6 format=1]

[ext_resource path="res://presspause.gd" type="Script" id=1]
[ext_resource path="res://littlemonster2.fnt" type="BitmapFont" id=2]
[ext_resource path="res://littlemonster.fnt" type="BitmapFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = false

[node name="Pause" type="Popup"]

process/pause_mode = 2
visibility/self_opacity = 0.0
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
popup/exclusive = false
script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

visibility/opacity = 0.75
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/panel = SubResource( 1 )

[node name="Continue" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 68.0
margin/top = 48.0
margin/right = -64.0
margin/bottom = -2.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Continue"
flat = true

[node name="About" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 45.0
margin/top = 0.0
margin/right = -45.0
margin/bottom = -42.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "About"
flat = true

[node name="Quit" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 36.0
margin/top = -48.0
margin/right = -36.0
margin/bottom = -90.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 20.0
margin/right = 20.0
margin/bottom = 20.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode/enabled = true
bbcode/bbcode = "[center]I started this project at the end of my senior year of high school, when my classmates and I were asked to make a presentation about what our last four years had been like. I realized that I couldn\'t really remember because of my mental illnesses.\n\nInstead, I took the opportunity to show what the world looks like from the eyes of someone with mental illness. Even mundane things like school can become hostile, and inner demons don\'t leave you alone. In particular, I chose to focus on my lifetime companion - Anxiety - and the Depression that gradually surfaced as I grew. The original game was buggy and slow because I had hand-coded it in Java, using the bare bones Mini2Dx engine. After I couldn\'t iron out the game I had created then, I opted to remake it entirely, this time using the open source game engine Godot.\n\nI have since been rediagnosed with PTSD and Bipolar Disorder, which I think are far more accurate. However, I kept the original concept, monsters, and dialogue intact in the hope of preserving my old worldview, even if it\'s changed since then. I did add a few features that I didn\'t have time to add before - music, more monsters, better lighting, etc. - but the game otherwise remains\nunchanged.\n\nNearly every part of 1365 was made by me, including graphics, sound, code, writing, and concept. The only parts that weren\'t are the font, which is Little Monster by Jack Oatley, and the game engine itself, built by the Godot team. I couldn\'t have done it without them.\n\nSo, two years after its initial creation, I\'m proud to present: 1365. I hope you enjoy playing it as much as I enjoyed making it![/center]\n\n[right]-Cicada Scott[/right]"
visible_characters = -1

[node name="Back" type="Button" parent="."]

visibility/visible = false
anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = 80.0
margin/right = 0.0
margin/bottom = 80.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]

[connection signal="pressed" from="About" to="." method="_on_About_pressed"]

[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]


